--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,9 @@
             <h1>Suyanne Domingos (Vulgo Charaktane!) </h1>
 
             <div class="social-links mt-4 text-center">
-                <a target="_blank" href="https://github.com/suyanneDomingos"> 
+                <a target="_blank" href="https://github.com/Charaktane"> 
                     <i class="bi bi-github"></i></a>
-                <a target="_blank" href="www.linkedin.com/in/suyanne-gomes-005b30302">
+                <a target="_blank" href="https://linkedin.com/in/suyanne-gomes-005b30302">
                     <i class="bi bi-linkedin"></i>
                 </a>
                   
