--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,7 @@ html, body {
     bottom: 0;
     background: #1E1E24;
     overflow-y: auto;
+    scrollbar-width: none;
     width: 300px;
     transition: all ease-in-out 0.5s; 
     padding: 0 15px;
@@ -125,4 +126,46 @@ section#inicio div#arraste {
 section#inicio div#arraste a {
     text-decoration: none;
     color:#FFF8F0 ;
+}
+
+i.menu-mobile {
+    position: fixed;
+    color: #FFF8F0;
+    background-color: #212431;
+    right: 1rem;
+    top: 1rem;
+    font-size: 1.5rem;
+    border-radius: 4rem;
+    cursor: pointer;
+    z-index: 10;
+    width: 45px;
+    height: 45px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+.menu-nav-active{
+    overflow: hidden;
+}
+.menu-nav-active #header{
+    left: 0;
+}
+
+@media (max-width: 1024px) {
+    #header {
+        left: -300px;
+    }
+    i.menu-mobile{
+        display: flex;
+    }
+    section#inicio h2{
+        font-size: 3.5rem;
+    }
+    section#inicio span#subtitle{
+        margin-right: 0;
+        font-size: 1rem;
+    }
+    #main{
+        margin-left: 0;
+    }
 }
