--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <title>Suyanne</title>
 </head>
 <body>
+    <i class="bi bi-list menu-mobile"></i>
     <aside id="header">
         <section class="profile">
 
